# Neatify

./: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.js  update.json  vite.config.ts
docs/: latest.json
src/: App.css  App.tsx
src-tauri/: .gitignore  2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  http-access.json  updater.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src/blocks/Backgrounds/DarkVeil/: DarkVeil.tsx
src/blocks/Backgrounds/DotGrid/: DotGrid.tsx
src/blocks/Backgrounds/Hyperspeed/: Hyperspeed.tsx
src/blocks/Backgrounds/Prism/: Prism.tsx
src/blocks/Backgrounds/Silk/: Silk.tsx
src/components/: AuthorCard.tsx  ConfettiEffect.tsx  FolderPicker.tsx  LiveUsers.tsx  OptionsPanel.tsx  PreviewModal.tsx  ProgressBar.tsx  Toast.tsx  WindowControls.tsx
src/utils/: tauriApi.ts
