[package]
name = "Neatify"
version = "3.0.1"
description = "Deepanshu Neatify"
authors = ["Deepanshu0211"]
edition = "2021"

[lib]
name = "neatify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["default"] }
discord-rich-presence = "0.2"
tauri-plugin-http = "2"



# Plugins
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime (with required features)
tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros", "time"] }
chrono = "0.4.41"
tauri-plugin-shell = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

